--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "flatpickr": "^4.6.13"
+        "flatpickr": "^4.6.13",
+        "jquery": "^3.7.1",
+        "select2": "^4.1.0-rc.0",
+        "select2-tailwindcss-theme": "^1.2.4"
     }
 }
